Fixed sizing issues on smaller devices other pages

--- a/style/contact.css
+++ b/style/contact.css
@@ -362,7 +362,13 @@ nav a {
     min-height: 60vh;
     flex-flow: column;
     justify-content: space-evenly;
+    font-size: 1rem;
+  }
+
+  footer p, .footer-nav a {
+    font-size: 2rem;
 }
+
   .copy {
     flex: none;
   }
