--- a/style/projects.css
+++ b/style/projects.css
@@ -431,7 +431,13 @@ footer {
   min-height: 60vh;
   flex-flow: column;
   justify-content: space-evenly;
+  font-size: 1rem;
 }
+
+footer p, .footer-nav a {
+  font-size: 2rem;
+}
+
 .copy {
   flex: none;
 }
